--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body, html {
     /* background-color: red; */
-    overflow: hidden;
+    /* overflow: hidden; */
     /* display: flex; */
     background-color: rgb(39, 39, 39);
     color: white;
+    padding: 0 0 40px;
 }
 a {
     color: rgba(255, 255, 255, 0.89);
@@ -21,8 +22,15 @@ li {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
+    background-color: rgb(39, 39, 39);
+}
+.footer>a {
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
